fix element overflow layout when in mobile

--- a/src/app/landing-modal/landing-modal.component.css
+++ b/src/app/landing-modal/landing-modal.component.css
@@ -13,15 +13,21 @@ a {
 }
 
 .modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     height: 100vh;
-    padding: 20%;
-
+    padding-left: 20%;
+    padding-right: 20%;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     opacity: 1; /* Initial opacity */
     transition: opacity 0.5s ease, transform 0.5s ease; /* Transition properties */
+}
+
+@media (max-width: 400px) {
+    .modal {
+        padding-top: 20%;
+        padding-bottom: 20%;
+    }
 }
 
 .modal.closing {
